# envx

./: .gitignore  Cargo.toml  README.md  build.rs   index-fixed.html  index.html  main.js  package-lock.json  package.json
demo/: demo_script.sh
src/: dna.rs  healer.rs  main.rs  p2p.rs  predictor.rs  time_capsule.rs
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
test-tauri/: index.html
test-tauri/src-tauri/: tauri.conf.json
test-tauri/src-tauri/src/: main.rs
